# actosha

./: .gitignore  AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  _bt.sh  _run_bt.sh  backtest_binance_2024_2026.md  backtest_binance_final.md  backtest_multi.tf.md  backtest_new_strategies.md  backtest_results.md  backtest_results_2026.md  calc_pnl.sh  check_live.sh  check_scan.sh  pyproject.toml  regime_results.json  requirements-dev.txt  requirements.txt  run.sh  run_backtest.py  run_binance_backtest.py  run_binance_final.py  run_binance_final.py.bak  run_binance_final_new.py  run_bt_final.py  run_multi_backtest.py  run_new_strategies_backtest.py  run_runner.sh  runner.py  test_binance_data.py  test_fetch.py  test_minimal.py  test_scan.sh  test_single.py  (+1 more)
ACTosha/: __init__.py
ACTosha/agents/: __init__.py  adaptive_portfolio_agent.py  backtest_agent.py  base.py  message_bus.py  portfolio_agent.py  scanner_agent.py  state.py  strategy_evaluator.py
ACTosha/backtester/: __init__.py  engine.py  metrics.py  portfolio.py  simulator.py  (+1 more)
KNOWLEDGE_BASE/: CHART_PATTERNS_KB.md
configs/: __init__.py  agent_runner.yaml  binance.yaml  default.yaml  hyperliquid.yaml
examples/: __init__.py  agent_example.py  backtest_example.py  quickstart.py  scanner_example.py
knowledge/: QUICK_REFERENCE.md  TRAINING_GUIDE.md  candlestick_patterns.md  chart_patterns.md  indicators_reference.md  patterns_to_strategies.md  regime_analysis.md
memory/: 2026-04-27-identity-intro.md  2026-04-27-knowledge-base.md  2026-04-27.md
tests/: __init__.py
(+59 files in other folders)
